--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="content_desc_weather_icon">Иконка погоды</string>
     <string name="celsius">C</string>
     <string name="fahrenheit">F</string>
+    <string name="degree">º</string>
 </resources>
