--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="wind_speed_metric">м/с</string>
     <string name="percent">%</string>
     <string name="rainfall_level">мм</string>
+    <string name="error_no_location_permission">Нет прав на чтение местоположения</string>
+
 </resources>
